<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="minium.co.settings.SiempoSettingsActivity$ConnectionFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_connection" />

    <header
        android:fragment="minium.co.settings.SiempoSettingsActivity$DeviceSettingsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_device" />

    <header
        android:fragment="minium.co.settings.SiempoSettingsActivity$PersonalSettingsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_personal" />

    <header
        android:fragment="minium.co.settings.SiempoSettingsActivity$SystemSettingsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_system" />


    <!--    <header android:icon="@drawable/ic_sync_black_24dp" android:title="@string/wifi_setting_summary">
    &lt;!&ndash;        <intent android:targetPackage="com.itc.siempompo"
            android:targetClass="android.settings.WIFI_DISPLAY_SETTINGS" />&ndash;&gt;
        </header>-->


</preference-headers>
